concord_macros/tests/v5/dsl/fail/fail_old_client_scheme_host.rs
use concord_core::prelude::*;
use concord_macros::api;

api! {
    client OldClientSchemeHostApi {
        scheme: https
        host: "example.com"
    }
}

fn main() {}
